test/tests/stages/8_loops/valid/extra_credit/switch_default_not_last.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  =
  identifier(a)
  =
  const int(7)
  ;
  switch
  (
  identifier(a)
  +
  identifier(b)
  )
  {
  default
  :
  return
  const int(0)
  ;
  case
  const int(2)
  :
  return
  const int(1)
  ;
  }
  }
