test/tests/stages/8_loops/invalid_semantics/extra_credit/different_cases_same_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[47]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  ;
  int
  identifier(b)
  =
  const int(10)
  ;
  break
  ;
  case
  const int(2)
  :
  ;
  int
  identifier(b)
  =
  const int(11)
  ;
  break
  ;
  default
  :
  break
  ;
  }
  return
  const int(0)
  ;
  }
